		- Integration with Gviz:
			* CuffGene objects now have a makeGeneRegionTrack() argument to create a GeneRegionTrack() from transcript model information
			* Can also make GRanges object
			* ONLY WORKS IF YOU READ .gtf FILE IN WITH readCufflinks()
		- Added csScatterMatrix() and csVolcanoMatrix() method to CuffData objects.
		- 
			
		
	Bugfixes:
		- Fixed diffData 'features' argument so that it now does what it's supposed to do.
		- added DB() with signature(object="CuffSet") to NAMESPACE
		
	Notes:
		- Once again, there have been modifications to the underlying database schema so you will have to re-run readCufflinks(rebuild=T) to re-analyze existing datasets.
		- Explicitly added requirement for 'plyr' package in DESCRIPTION.
		- Set pseudocount=0.0 as default for csDensity() and csScatter() methods (This prevents a visual bias for genes with FPKM <1 and ggplot2 handles removing true zero values).
		
		
v1.99.2
	Bugfixes:
		- Fixed bug in replicate table that did not apply make.db.names to match samples table.
		- Fixed bug for missing values in *.count_tracking files.
		- Now correctly applying make.db.names to *.read_group_tracking files.
		- Now correctly allows for empty *.count_tracking and *.read_group_tracking files

v1.99.1
	- This represents a major set of improvements and feature additions to cummeRbund.
	- cummeRbund now incorporates additional information emitted from cuffdiff 2.0 including:
		- run parameters and information.
		- sample-level information such as mass and scaling factors.
		- individual replicate fpkms and associated statistics for all features.
		- raw and normalized count tables and associated statistics all features.
	
	New Features:
		- Please see updated vignette for overview of new features.
		- New dispersionPlot() to visualize model fit (mean count vs dispersion) at all feature levels.
		- New runInfo() method returns cuffdiff run parameters.