@@ -59,6 +59,7 @@ setGeneric("makeRnk",function(object,x,y,filename,...) standardGeneric("makeRnk"
 setGeneric("csScatterMatrix",function(object,replicates=FALSE,logMode=TRUE,...) standardGeneric("csScatterMatrix"))
 setGeneric("csVolcanoMatrix",function(object,replicates=FALSE,logMode=TRUE,...) standardGeneric("csVolcanoMatrix"))
 setGeneric("MDSplot",function(object,replicates=FALSE,logMode=TRUE,...) standardGeneric("MDSplot"))
+setGeneric("PCAplot",function(object,x="PC1", y="PC2",pseudocount=1.0,scale=TRUE,...) standardGeneric("PCAplot"))
 setGeneric("fpkmSCVPlot",function(object,FPKMLowerBound=1,...) standardGeneric("fpkmSCVPlot"))
 
 
