@@ -796,9 +796,9 @@ setMethod("getSigTable",signature(object="CuffSet"),.getSigTable)
 	
 	p<-ggplot(sig,aes(x=sample_1,y=sample_2))
 	
-	p<- p + stat_sum(aes(fill=..n..), geom="tile") + scale_fill_continuous(low="white",high="green") + expand_limits(fill=0)
+	p<- p + stat_sum(aes(fill=..n..),color="black",size=0.3, geom="tile") + scale_fill_continuous(low="white",high="green") + expand_limits(fill=0)
 	
-	p<- p + stat_sum(aes(label=..n..),geom="text",size=6)
+	p<- p + stat_sum(aes(label=..n..),geom="text",size=6,legend=FALSE)
 	
 	#p <- p + geom_tile(aes(fill=..n..))
 	
