@@ -11,7 +11,9 @@ v1.99.3
 			* Can also make GRanges object
 			* ONLY WORKS IF YOU READ .gtf FILE IN WITH readCufflinks()
 		- Added csScatterMatrix() and csVolcanoMatrix() method to CuffData objects.
-		- 
+		- Added fpkmSCVPlot() as a CuffData method to visualize replicate-level coefficient of variation across fpkm range per condition.
+		- Added PCAplot() and MDSplot() for dimensionality reduction visualizations (Principle components, and multi-dimensional scaling respectively)
+		- Added csDistHeat() to create a heatmap of JS-distances between conditions.  
 			
 		
 	Bugfixes:
